Update WorldMap.java